k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-container-app
        # Replace $LOCATION with your Artifact Registry location (e.g., us-west1).
        # Replace $GCLOUD_PROJECT with your project ID.
        image: horowitzathome/hello-container:v0.1.12-amd64
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 8080
